--- a/opensips.cfg
+++ b/opensips.cfg
@@ -1,5 +1,11 @@
 loadmodule "auth_db.so"
 loadmodule "auth.so"
+loadmodule "tm.so"          # Para t_relay()
+loadmodule "sl.so"          # Para send_reply()
+loadmodule "pv.so"          # Para variáveis $au, $ap
+loadmodule "usrloc.so"      # Para save("location")
+loadmodule "registrar.so"   # Para funções relacionadas ao registro
+loadmodule "domain.so"     # Para db_does_uri_exist()
 
 route {
   if (is_method("REGISTER")) {
@@ -13,12 +19,14 @@ route {
       proxy_challenge("", "0");
       exit;
     }
-    if (!db_check_from()) {
+    # db_check_from() não está disponível sem db, verifica se o usuário está registrado.
+    if (!lookup("location")) {
       send_reply("403", "Forbidden");
       exit;
     }
   } else {
-    if (!db_does_uri_exist()) {
+    # db_does_uri_exist() não está disponível sem db, use a função do módulo 'domain'.
+    if (!is_uri_host_local()) {
       send_reply("404", "Not Found");
       exit;
     }
