--- a/opensips.cfg
+++ b/opensips.cfg
@@ -12,7 +12,6 @@
 # for a explanation of possible statements, functions and parameters.
 #
 
-
 ####### Global Parameters #########
 
 /* uncomment the following lines to enable debugging */
@@ -33,10 +32,7 @@ udp_workers=4
    lookup failures (default disabled) */
 #dns_try_ipv6=yes
 
-
-socket=udp:0.0.0.0:5060   # CUSTOMIZE ME
-
-
+listen=udp:0.0.0.0:5060   # CUSTOMIZE ME
 
 ####### Modules Section ########
 
@@ -95,6 +91,14 @@ modparam("acc", "detect_direction", 0)
 
 loadmodule "proto_udp.so"
 
+#### AUTH module
+loadmodule "auth.so"
+
+#### AUTH_AAA module
+loadmodule "auth_aaa.so"
+modparam("auth_aaa", "aaa_url", "radius://127.0.0.1:1812/testing123")
+modparam("auth_aaa", "use_domain", "no")
+
 ####### Routing Logic ########
 
 # main request routing logic
@@ -146,33 +150,36 @@ route{
         # absorb retransmissions, but do not create transaction
         t_check_trans();
 
+        if (is_method("INVITE|SUBSCRIBE|MESSAGE")) {
+            if (!auth_check("$fd", "subscriber", "1")) {
+                auth_challenge("$fd", "1");
+                exit;
+            }
+        }
+        
+        # authenticate requests
+        if (is_method("REGISTER")) {
+            if ($au == "teste" && $ap == "123") {
+                # authentication successful
+                xlog("L_INFO", "Authentication successful for user $au\n");
+            } else {
+                # authentication failed
+                xlog("L_ERR", "Authentication failed for user $au\n");
+                send_reply(401, "Unauthorized");
+                exit;
+            }
+        }
 
-        $rd='192.168.1.1';
 
- #       if ( !(is_method("REGISTER")  ) ) {
-#
- #               if (is_myself("$fd")) {
-#
- #               } else {
- #                       # if caller is not local, then called number must be local
-#
-  #                      if (!is_myself("$rd")) {
-  #                              xlog("L_INFO", "Rota inicial - /$si/$fU/$rU/$fd/$ci");
- #                               send_reply(405,"Algo errado !");
- #                               exit;
- #                       }
- #               }
-#
- #       }
 
         # preloaded route checking
-        #if (loose_route()) {
-#               xlog("L_ERR",
-#                       "Attempt to route with preloaded Route's [$fu/$tu/$ru/$ci]");
-#               if (!is_method("ACK"))
-#                       send_reply(403,"Preload Route denied");
-#               exit;
-#       }
+        if (loose_route()) {
+               xlog("L_ERR",
+                       "Attempt to route with preloaded Route's [$fu/$tu/$ru/$ci]");
+               if (!is_method("ACK"))
+                       send_reply(403,"Preload Route denied");
+               exit;
+       }
 
         # record routing
         if (!is_method("REGISTER|MESSAGE"))
@@ -183,7 +190,6 @@ route{
 
                 do_accounting("log");
         }
-
 
         if (!is_myself("$rd")) {
                 append_hf("P-hint: outbound\r\n");
@@ -223,7 +229,6 @@ route{
         route(relay);
 }
 
-
 route[relay] {
         # for INVITEs enable some additional helper routes
         if (is_method("INVITE")) {
@@ -245,11 +250,9 @@ branch_route[per_branch_ops] {
         xlog("new branch at $ru\n");
 }
 
-
 onreply_route[handle_nat] {
         xlog("incoming reply\n");
 }
-
 
 failure_route[missed_call] {
         if (t_was_cancelled()) {
@@ -262,6 +265,5 @@ failure_route[missed_call] {
         ##t_reply(404,"Not found");
         ##      exit;
         ##}
-
 
 }
