--- a/opensips.cfg
+++ b/opensips.cfg
@@ -20,7 +20,7 @@
 log_level=3
 xlog_level=3
 log_facility=LOG_LOCAL0
-
+log_stderror=no
 udp_workers=4
 
 /* uncomment the next line to enable the auto temporary blacklisting of
