--- a/opensips.cfg
+++ b/opensips.cfg
@@ -19,8 +19,9 @@
 
 log_level=3
 xlog_level=3
+log_stderror=no  # This is correct for OpenSIPS 3.2
 log_facility=LOG_LOCAL0
-log_stderror=no
+
 udp_workers=4
 
 /* uncomment the next line to enable the auto temporary blacklisting of
@@ -31,7 +32,7 @@ udp_workers=4
    lookup failures (default disabled) */
 #dns_try_ipv6=yes
 
-listen=udp:0.0.0.0:5060   # CUSTOMIZE ME
+listen=udp:0.0.0.0:5060    # CUSTOMIZE ME
 
 ####### Modules Section ########
 
