--- a/opensips.cfg
+++ b/opensips.cfg
@@ -4,7 +4,7 @@ debug_mode=yes
 
 log_level=3
 xlog_level=3
-# Deixe log_stderror=yes para ver logs no console (stderr) - bom para testes
+# para ver logs no console (stderr) - bom para testes
 log_stderror=yes
 log_facility=LOG_LOCAL0 # Mantenha isso para enviar logs para syslog também, caso você configure um depois.
 
