--- a/opensips.cfg
+++ b/opensips.cfg
@@ -1,16 +1,38 @@
+#
+# OpenSIPS residential configuration script
+#     by OpenSIPS Solutions <team@opensips-solutions.com>
+#
+# This script was generated via "make menuconfig", from
+#   the "Residential" scenario.
+# You can enable / disable more features / functionalities by
+#   re-generating the scenario with different options.#
+#
+# Please refer to the Core CookBook at:
+#      https://opensips.org/Resources/DocsCookbooks
+# for a explanation of possible statements, functions and parameters.
+#
+
 ####### Global Parameters #########
 
-debug_mode=yes
+/* uncomment the following lines to enable debugging */
+#debug_mode=yes
 
 log_level=3
 xlog_level=3
-# para ver logs no console (stderr) - bom para testes
-log_stderror=yes
-log_facility=LOG_LOCAL0 # Mantenha isso para enviar logs para syslog também, caso você configure um depois.
+log_stderror=no  # This is correct for OpenSIPS 3.2
+log_facility=LOG_LOCAL0
 
 udp_workers=4
 
-listen=udp:0.0.0.0:5060   # CUSTOMIZE ME
+/* uncomment the next line to enable the auto temporary blacklisting of
+   not available destinations (default disabled) */
+#disable_dns_blacklist=no
+
+/* uncomment the next line to enable IPv6 lookup after IPv4 dns
+   lookup failures (default disabled) */
+#dns_try_ipv6=yes
+
+listen=udp:0.0.0.0:5060    # CUSTOMIZE ME
 
 ####### Modules Section ########
 
@@ -54,6 +76,8 @@ modparam("usrloc", "working_mode_preset", "single-instance-no-db")
 #### REGISTRAR module
 loadmodule "registrar.so"
 modparam("registrar", "tcp_persistent_flag", "TCP_PERSISTENT")
+/* uncomment the next line not to allow more than 10 contacts per AOR */
+#modparam("registrar", "max_contacts", 10)
 
 #### ACCounting module
 loadmodule "acc.so"
@@ -146,22 +170,81 @@ route{
             }
         }
 
-        # Redirecionamento de todas as chamadas
-        xlog("L_INFO", "Redirecionando chamada de $fu para $ru");
-        $rd = "5t4n6j0wnrl.sip.livekit.cloud";
-        $ru = "sip:" + $rU + "@" + $rd;       
-        xlog("L_INFO", "Redirecionando chamada para $ru");
+
+
+        # preloaded route checking
+        if (loose_route()) {
+               xlog("L_ERR",
+                       "Attempt to route with preloaded Route's [$fu/$tu/$ru/$ci]");
+               if (!is_method("ACK"))
+                       send_reply(403,"Preload Route denied");
+               exit;
+       }
+
+        # record routing
+        if (!is_method("REGISTER|MESSAGE"))
+                record_route();
+
+        # account only INVITEs
+        if (is_method("INVITE")) {
+
+                do_accounting("log");
+        }
+
+        if (!is_myself("$rd")) {
+                append_hf("P-hint: outbound\r\n");
+
+                route(relay);
+        }
+
+        # requests for my domain
+
+        if (is_method("PUBLISH|SUBSCRIBE")) {
+                send_reply(503, "Service Unavailable");
+                exit;
+        }
+
+        if (is_method("REGISTER")) {
+                # store the registration and generate a SIP reply
+                if (!save("location"))
+                        xlog("failed to register AoR $tu\n");
+
+                exit;
+        }
+
+        if ($rU==NULL) {
+                # request with no Username in RURI
+                send_reply(484,"Address Incomplete");
+                exit;
+        }
+
+        # do lookup with method filtering
+        if (!lookup("location","m")) {
+                t_reply(404, "Not Found");
+                exit;
+        }
+
+        # when routing via usrloc, log the missed calls also
+        do_accounting("log","missed");
         route(relay);
-        exit;
 }
 
 route[relay] {
-        xlog("L_INFO", "Entrando na rota relay, encaminhando para $ru");
-        if (!t_relay_to_udp("$ru", "5060")) {
+        # for INVITEs enable some additional helper routes
+        if (is_method("INVITE")) {
+                t_on_branch("per_branch_ops");
+                t_on_reply("handle_nat");
+                t_on_failure("missed_call");
+        }
+
+        if (!t_relay()) {
                 send_reply(500,"Internal Error");
         }
         exit;
 }
+
+
+
 
 branch_route[per_branch_ops] {
         xlog("new branch at $ru\n");
@@ -175,4 +258,12 @@ failure_route[missed_call] {
         if (t_was_cancelled()) {
                 exit;
         }
+
+        # uncomment the following lines if you want to block client
+        # redirect based on 3xx replies.
+        ##if (t_check_status("3[0-9][0-9]")) {
+        ##t_reply(404,"Not found");
+        ##      exit;
+        ##}
+
 }
