--- a/opensips.cfg
+++ b/opensips.cfg
@@ -12,6 +12,7 @@
 # for a explanation of possible statements, functions and parameters.
 #
 
+
 ####### Global Parameters #########
 
 /* uncomment the following lines to enable debugging */
@@ -19,7 +20,7 @@
 
 log_level=3
 xlog_level=3
-log_stderror=no  # This is correct for OpenSIPS 3.2
+log_stderror=no
 log_facility=LOG_LOCAL0
 
 udp_workers=4
@@ -32,7 +33,10 @@ udp_workers=4
    lookup failures (default disabled) */
 #dns_try_ipv6=yes
 
-listen=udp:0.0.0.0:5060    # CUSTOMIZE ME
+
+socket=udp:0.0.0.0:5060   # CUSTOMIZE ME
+
+
 
 ####### Modules Section ########
 
@@ -91,14 +95,6 @@ modparam("acc", "detect_direction", 0)
 
 loadmodule "proto_udp.so"
 
-#### AUTH module
-loadmodule "auth.so"
-
-#### AUTH_AAA module
-loadmodule "auth_aaa.so"
-modparam("auth_aaa", "aaa_url", "radius://127.0.0.1:1812/testing123")
-modparam("auth_aaa", "use_domain", "no")
-
 ####### Routing Logic ########
 
 # main request routing logic
@@ -150,36 +146,33 @@ route{
         # absorb retransmissions, but do not create transaction
         t_check_trans();
 
-        if (is_method("INVITE|SUBSCRIBE|MESSAGE")) {
-            if (!auth_check("$fd", "subscriber", "1")) {
-                auth_challenge("$fd", "1");
-                exit;
-            }
-        }
-        
-        # authenticate requests
-        if (is_method("REGISTER")) {
-            if ($au == "teste" && $ap == "123") {
-                # authentication successful
-                xlog("L_INFO", "Authentication successful for user $au\n");
-            } else {
-                # authentication failed
-                xlog("L_ERR", "Authentication failed for user $au\n");
-                send_reply(401, "Unauthorized");
-                exit;
-            }
-        }
 
+        $rd='192.168.1.1';
 
+ #       if ( !(is_method("REGISTER")  ) ) {
+#
+ #               if (is_myself("$fd")) {
+#
+ #               } else {
+ #                       # if caller is not local, then called number must be local
+#
+  #                      if (!is_myself("$rd")) {
+  #                              xlog("L_INFO", "Rota inicial - /$si/$fU/$rU/$fd/$ci");
+ #                               send_reply(405,"Algo errado !");
+ #                               exit;
+ #                       }
+ #               }
+#
+ #       }
 
         # preloaded route checking
-        if (loose_route()) {
-               xlog("L_ERR",
-                       "Attempt to route with preloaded Route's [$fu/$tu/$ru/$ci]");
-               if (!is_method("ACK"))
-                       send_reply(403,"Preload Route denied");
-               exit;
-       }
+        #if (loose_route()) {
+#               xlog("L_ERR",
+#                       "Attempt to route with preloaded Route's [$fu/$tu/$ru/$ci]");
+#               if (!is_method("ACK"))
+#                       send_reply(403,"Preload Route denied");
+#               exit;
+#       }
 
         # record routing
         if (!is_method("REGISTER|MESSAGE"))
@@ -190,6 +183,7 @@ route{
 
                 do_accounting("log");
         }
+
 
         if (!is_myself("$rd")) {
                 append_hf("P-hint: outbound\r\n");
@@ -229,6 +223,7 @@ route{
         route(relay);
 }
 
+
 route[relay] {
         # for INVITEs enable some additional helper routes
         if (is_method("INVITE")) {
@@ -250,9 +245,11 @@ branch_route[per_branch_ops] {
         xlog("new branch at $ru\n");
 }
 
+
 onreply_route[handle_nat] {
         xlog("incoming reply\n");
 }
+
 
 failure_route[missed_call] {
         if (t_was_cancelled()) {
@@ -265,5 +262,6 @@ failure_route[missed_call] {
         ##t_reply(404,"Not found");
         ##      exit;
         ##}
+
 
 }
