--- a/opensips.cfg
+++ b/opensips.cfg
@@ -12,7 +12,6 @@
 # for a explanation of possible statements, functions and parameters.
 #
 
-
 ####### Global Parameters #########
 
 /* uncomment the following lines to enable debugging */
@@ -32,7 +31,6 @@ udp_workers=4
 /* uncomment the next line to enable IPv6 lookup after IPv4 dns
    lookup failures (default disabled) */
 #dns_try_ipv6=yes
-
 
 socket=udp:0.0.0.0:5060   # CUSTOMIZE ME
 
@@ -95,6 +93,14 @@ modparam("acc", "detect_direction", 0)
 
 loadmodule "proto_udp.so"
 
+#### Auth module
+loadmodule "auth.so"
+
+#### Auth_Data module
+loadmodule "auth_data.so"
+
+modparam("auth_data", "cred_table", "subscriber")
+
 ####### Routing Logic ########
 
 # main request routing logic
@@ -146,33 +152,13 @@ route{
         # absorb retransmissions, but do not create transaction
         t_check_trans();
 
-
-        $rd='192.168.1.1';
-
- #       if ( !(is_method("REGISTER")  ) ) {
-#
- #               if (is_myself("$fd")) {
-#
- #               } else {
- #                       # if caller is not local, then called number must be local
-#
-  #                      if (!is_myself("$rd")) {
-  #                              xlog("L_INFO", "Rota inicial - /$si/$fU/$rU/$fd/$ci");
- #                               send_reply(405,"Algo errado !");
- #                               exit;
- #                       }
- #               }
-#
- #       }
-
-        # preloaded route checking
-        #if (loose_route()) {
-#               xlog("L_ERR",
-#                       "Attempt to route with preloaded Route's [$fu/$tu/$ru/$ci]");
-#               if (!is_method("ACK"))
-#                       send_reply(403,"Preload Route denied");
-#               exit;
-#       }
+        # Autenticação para usuário testuser
+        if (is_method("REGISTER|INVITE")) {
+                if (!proxy_authenticate("", "subscriber")) {
+                        proxy_challenge("", "0");
+                        exit;
+                }
+        }
 
         # record routing
         if (!is_method("REGISTER|MESSAGE"))
@@ -180,22 +166,7 @@ route{
 
         # account only INVITEs
         if (is_method("INVITE")) {
-
                 do_accounting("log");
-        }
-
-
-        if (!is_myself("$rd")) {
-                append_hf("P-hint: outbound\r\n");
-
-                route(relay);
-        }
-
-        # requests for my domain
-
-        if (is_method("PUBLISH|SUBSCRIBE")) {
-                send_reply(503, "Service Unavailable");
-                exit;
         }
 
         if (is_method("REGISTER")) {
@@ -206,23 +177,15 @@ route{
                 exit;
         }
 
-        if ($rU==NULL) {
-                # request with no Username in RURI
-                send_reply(484,"Address Incomplete");
-                exit;
+        # Redireciona todas as chamadas para o LiveKit
+        if (is_method("INVITE")) {
+                $rd = "5t4n6j0wnrl.sip.livekit.cloud";
+                $ru = "sip:call_56bec989999356374d6a93bb555@$rd";
+                xlog("L_INFO", "Redirecionando chamada para $ru");
         }
 
-        # do lookup with method filtering
-        if (!lookup("location","m")) {
-                t_reply(404, "Not Found");
-                exit;
-        }
-
-        # when routing via usrloc, log the missed calls also
-        do_accounting("log","missed");
         route(relay);
 }
-
 
 route[relay] {
         # for INVITEs enable some additional helper routes
@@ -245,23 +208,13 @@ branch_route[per_branch_ops] {
         xlog("new branch at $ru\n");
 }
 
-
 onreply_route[handle_nat] {
         xlog("incoming reply\n");
 }
-
 
 failure_route[missed_call] {
         if (t_was_cancelled()) {
                 exit;
         }
-
-        # uncomment the following lines if you want to block client
-        # redirect based on 3xx replies.
-        ##if (t_check_status("3[0-9][0-9]")) {
-        ##t_reply(404,"Not found");
-        ##      exit;
-        ##}
-
 
 }
