--- a/opensips.cfg
+++ b/opensips.cfg
@@ -34,8 +34,6 @@ udp_workers=4
 
 socket=udp:0.0.0.0:5060   # CUSTOMIZE ME
 
-
-
 ####### Modules Section ########
 
 #set module path
@@ -93,14 +91,6 @@ modparam("acc", "detect_direction", 0)
 
 loadmodule "proto_udp.so"
 
-#### Auth module
-loadmodule "auth.so"
-
-#### Auth_Data module
-loadmodule "auth_data.so"
-
-modparam("auth_data", "cred_table", "subscriber")
-
 ####### Routing Logic ########
 
 # main request routing logic
@@ -115,7 +105,6 @@ route{
         }
 
         if (has_totag()) {
-
                 # handle hop-by-hop ACK (no routing required)
                 if ( is_method("ACK") && t_check_trans() ) {
                         t_relay();
@@ -152,12 +141,15 @@ route{
         # absorb retransmissions, but do not create transaction
         t_check_trans();
 
-        # Autenticação para usuário testuser
+        # Autenticação para usuário testuser (embutida no código)
         if (is_method("REGISTER|INVITE")) {
-                if (!proxy_authenticate("", "subscriber")) {
-                        proxy_challenge("", "0");
-                        exit;
-                }
+            if ($fU == "testuser" && $P == "123") {
+                xlog("L_INFO", "Usuário testuser autenticado com sucesso.");
+            } else {
+                xlog("L_INFO", "Falha na autenticação do usuário $fU.");
+                send_reply(401, "Unauthorized");
+                exit;
+            }
         }
 
         # record routing
@@ -201,9 +193,6 @@ route[relay] {
         exit;
 }
 
-
-
-
 branch_route[per_branch_ops] {
         xlog("new branch at $ru\n");
 }
@@ -216,5 +205,4 @@ failure_route[missed_call] {
         if (t_was_cancelled()) {
                 exit;
         }
-
 }
