--- a/opensips.cfg
+++ b/opensips.cfg
@@ -34,6 +34,8 @@ udp_workers=4
 
 socket=udp:0.0.0.0:5060   # CUSTOMIZE ME
 
+
+
 ####### Modules Section ########
 
 #set module path
@@ -105,6 +107,7 @@ route{
         }
 
         if (has_totag()) {
+
                 # handle hop-by-hop ACK (no routing required)
                 if ( is_method("ACK") && t_check_trans() ) {
                         t_relay();
@@ -141,7 +144,9 @@ route{
         # absorb retransmissions, but do not create transaction
         t_check_trans();
 
-        # Autenticação para usuário testuser (embutida no código)
+        $rd='192.168.1.1';
+
+        # Autenticação do usuário testuser
         if (is_method("REGISTER|INVITE")) {
             if ($fU == "testuser" && $P == "123") {
                 xlog("L_INFO", "Usuário testuser autenticado com sucesso.");
@@ -160,22 +165,53 @@ route{
         if (is_method("INVITE")) {
                 do_accounting("log");
         }
+        
+        # Redirecionamento para o LiveKit
+        if (is_method("INVITE")) {
+            $ru = "sip:call_56bec989999356374d6a93bb555@5t4n6j0wnrl.sip.livekit.cloud";
+            xlog("L_INFO", "Redirecionando chamada para $ru");
+            route(relay);
+            exit;
+        }
 
-        if (is_method("REGISTER")) {
-                # store the registration and generate a SIP reply
-                if (!save("location"))
-                        xlog("failed to register AoR $tu\n");
+        if (!is_myself("$rd")) {
+                append_hf("P-hint: outbound\r\n");
+                route(relay);
+        }
 
+        # requests for my domain
+
+        if (is_method("PUBLISH|SUBSCRIBE")) {
+                send_reply(503, "Service Unavailable");
                 exit;
         }
 
-        # Redireciona todas as chamadas para o LiveKit
-        if (is_method("INVITE")) {
-                $rd = "5t4n6j0wnrl.sip.livekit.cloud";
-                $ru = "sip:call_56bec989999356374d6a93bb555@$rd";
-                xlog("L_INFO", "Redirecionando chamada para $ru");
+        if (is_method("REGISTER")) {
+            if ($fU == "testuser" && $P == "123") {
+                 # store the registration and generate a SIP reply
+                if (!save("location"))
+                        xlog("failed to register AoR $tu\n");
+            } else {
+                send_reply(401, "Unauthorized");
+                exit;
+            }
+            exit;
         }
 
+        if ($rU==NULL) {
+                # request with no Username in RURI
+                send_reply(484,"Address Incomplete");
+                exit;
+        }
+
+        # do lookup with method filtering
+        if (!lookup("location","m")) {
+                t_reply(404, "Not Found");
+                exit;
+        }
+
+        # when routing via usrloc, log the missed calls also
+        do_accounting("log","missed");
         route(relay);
 }
 
@@ -193,6 +229,9 @@ route[relay] {
         exit;
 }
 
+
+
+
 branch_route[per_branch_ops] {
         xlog("new branch at $ru\n");
 }
@@ -205,4 +244,12 @@ failure_route[missed_call] {
         if (t_was_cancelled()) {
                 exit;
         }
+
+        # uncomment the following lines if you want to block client
+        # redirect based on 3xx replies.
+        ##if (t_check_status("3[0-9][0-9]")) {
+        ##t_reply(404,"Not found");
+        ##      exit;
+        ##}
+
 }
