--- a/opensips.cfg
+++ b/opensips.cfg
@@ -12,6 +12,7 @@
 # for a explanation of possible statements, functions and parameters.
 #
 
+
 ####### Global Parameters #########
 
 /* uncomment the following lines to enable debugging */
@@ -31,6 +32,7 @@ udp_workers=4
 /* uncomment the next line to enable IPv6 lookup after IPv4 dns
    lookup failures (default disabled) */
 #dns_try_ipv6=yes
+
 
 socket=udp:0.0.0.0:5060   # CUSTOMIZE ME
 
@@ -144,38 +146,58 @@ route{
         # absorb retransmissions, but do not create transaction
         t_check_trans();
 
+
         $rd='192.168.1.1';
 
-        # Autenticação do usuário testuser
+         # Autenticação para usuário testuser (embutida no código)
         if (is_method("REGISTER|INVITE")) {
-            if ($fU == "testuser" && $P == "123") {
+            if ($fU == "testuser" ) {
                 xlog("L_INFO", "Usuário testuser autenticado com sucesso.");
             } else {
-                xlog("L_INFO", "Falha na autenticação do usuário $fU.");
+                xlog("L_INFO", "Falha na autenticação do usuário.");
                 send_reply(401, "Unauthorized");
                 exit;
             }
-        }
+       }
+       if ( !(is_method("REGISTER")  ) ) {
 
+                if (is_myself("$fd")) {
+
+                } else {
+                       # if caller is not local, then called number must be local
+
+                        if (!is_myself("$rd")) {
+                                xlog("L_INFO", "Rota inicial - /$si/$fU/$rU/$fd/$ci");
+                               send_reply(405,"Algo errado !");
+                                exit;
+                       }
+                }
+
+       }
+
+        # preloaded route checking
+        #if (loose_route()) {
+#               xlog("L_ERR",
+#                       "Attempt to route with preloaded Route's [$fu/$tu/$ru/$ci]");
+#               if (!is_method("ACK"))
+#                       send_reply(403,"Preload Route denied");
+#               exit;
+#       }
+       
         # record routing
         if (!is_method("REGISTER|MESSAGE"))
                 record_route();
 
         # account only INVITEs
         if (is_method("INVITE")) {
+
                 do_accounting("log");
         }
-        
-        # Redirecionamento para o LiveKit
-        if (is_method("INVITE")) {
-            $ru = "sip:call_56bec989999356374d6a93bb555@5t4n6j0wnrl.sip.livekit.cloud";
-            xlog("L_INFO", "Redirecionando chamada para $ru");
-            route(relay);
-            exit;
-        }
+
 
         if (!is_myself("$rd")) {
                 append_hf("P-hint: outbound\r\n");
+
                 route(relay);
         }
 
@@ -187,15 +209,11 @@ route{
         }
 
         if (is_method("REGISTER")) {
-            if ($fU == "testuser" && $P == "123") {
-                 # store the registration and generate a SIP reply
+                # store the registration and generate a SIP reply
                 if (!save("location"))
                         xlog("failed to register AoR $tu\n");
-            } else {
-                send_reply(401, "Unauthorized");
+
                 exit;
-            }
-            exit;
         }
 
         if ($rU==NULL) {
@@ -214,6 +232,7 @@ route{
         do_accounting("log","missed");
         route(relay);
 }
+
 
 route[relay] {
         # for INVITEs enable some additional helper routes
@@ -236,9 +255,11 @@ branch_route[per_branch_ops] {
         xlog("new branch at $ru\n");
 }
 
+
 onreply_route[handle_nat] {
         xlog("incoming reply\n");
 }
+
 
 failure_route[missed_call] {
         if (t_was_cancelled()) {
@@ -251,5 +272,6 @@ failure_route[missed_call] {
         ##t_reply(404,"Not found");
         ##      exit;
         ##}
+
 
 }
